fix: minor styling tweaks

--- a/packages/ToggleList/ToggleList.stories.mdx
+++ b/packages/ToggleList/ToggleList.stories.mdx
@@ -62,10 +62,10 @@ import { YourVicToggleList } from '@dpc-sdp/yourvic-toggle-list'
           items: {
             default: () => object('items', [
               {id: 'item1', title: 'Item 1', icon: 'map_marker', color: 'primary'},
-              {id: 'item2', title: 'Item 2', icon: 'alert_smoke', color: 'danger'},
+              {id: 'item2', title: 'Item 2', icon: 'instagram', color: 'danger'},
               {id: 'item3', title: 'Item 3', icon: 'home', color: 'success'},
-              {id: 'item4', title: 'Item 4', icon: 'lock', color: 'secondary'},
-              {id: 'item5', title: 'Item 5', icon: 'document_transparent', color: 'warning'},
+              {id: 'item4', title: 'Item 4', icon: 'share_alternative', color: 'secondary'},
+              {id: 'item5', title: 'Item 5', icon: 'document', color: 'warning'},
             ])
           },
           selectedItems: {
