--- a/packages/map-core/Map.stories.mdx
+++ b/packages/map-core/Map.stories.mdx
@@ -405,8 +405,8 @@ selected feature by passing a style or style function to the map through ```sele
                 </yourvic-map-core>
               </rpl-col>
               <rpl-col cols=6>
-                <data-block :data="selectDataBlock" :selectable="false" :isBlock="true" />
-                <data-block :data="clickDataBlock" :selectable="false" :isBlock="true" />
+                <data-block :data="selectDataBlock" :selectable="false" :isBlock="true" style="marginBottom: 10px; marginRight: 10px" />
+                <data-block :data="clickDataBlock" :selectable="false" :isBlock="true" style="marginBottom: 10px; marginRight: 10px" />
               </rpl-col>
             </rpl-row>
           </RplContainer>
