feat: add Address search and tests

--- a/packages/AreaSearch/AreaSearch.stories.mdx
+++ b/packages/AreaSearch/AreaSearch.stories.mdx
@@ -25,10 +25,7 @@ import { AreaSearch } from '@dpc-sdp/yourvic-areasearch'
 ## Usage
 
 ```html
-<area-search
-  :items="items"
-  result-item-line-style="single"
-/>
+<area-search />
 ```
 
 ## Props
