fix: fix bugs with toggle list

--- a/packages/ToggleList/ToggleList.stories.mdx
+++ b/packages/ToggleList/ToggleList.stories.mdx
@@ -50,7 +50,7 @@ import { YourVicToggleList } from '@dpc-sdp/yourvic-toggle-list'
       {
         components: { YourVicToggleList },
         template: `
-          <div :style="divStyle">
+          <div>
             <your-vic-toggle-list
               :items="items"
               :selectedItems="selectedItems"
