feat: accessibility improvement to aria-label, attributions and labels in examples; added zoomToExtent option for vector layer

--- a/packages/map-core/MapVectorLayer.stories.mdx
+++ b/packages/map-core/MapVectorLayer.stories.mdx
@@ -308,6 +308,7 @@ alongside a CQL_FILTER (this is not supported by Geoserver).
             :url="layerUrl"
             dataFormat="GeoJSON"
             loadingStrategy="bbox"
+            zoomToExtent
           />
         </yourvic-map-core>`,
         data: () => {
