--- a/packages/Examples/Example1.stories.mdx
+++ b/packages/Examples/Example1.stories.mdx
@@ -1,35 +1,35 @@
 import { Meta, Preview, Story, Props, Source, Description } from '@storybook/addon-docs/blocks';
-import Example2 from './index.vue'
+import Example1 from './Example1.vue'
 import { withKnobs, object, boolean, select } from '@storybook/addon-knobs'
 import { RplContainer, RplRow, RplCol } from '@dpc-sdp/ripple-grid'
 
-<Meta title="Example 2" component={ Example2 } decorators={ [withKnobs] } />
+<Meta title="Examples/Example 1" component={ Example1 } decorators={ [withKnobs] } />
 
-# Example 2
+# Example 1
 
 <Description of={ Example1 } type='docgen' />
 
 ## Installation
 
 ```bash
-npm install @dpc-sdp/yourvic-example2 --save
+npm install @dpc-sdp/yourvic-example1 --save
 ```
 
 ## Import
 
 ```javascript
-import { Example2 } from '@dpc-sdp/yourvic-example2'
+import { Example1 } from '@dpc-sdp/yourvic-example1'
 ```
 
 ## Usage
 
 ```html
-<example-2 />
+<example-1 />
 ```
 
 ## Props
 
-<Props of={ Example2 } />
+<Props of={ Example1 } />
 
 ## Default
 
@@ -37,8 +37,8 @@ import { Example2 } from '@dpc-sdp/yourvic-example2'
   <Story name="Default">
     {
       {
-        components: { Example2 },
-        template: '<example-2 />',
+        components: { Example1 },
+        template: '<example-1 />',
         props: {
         }
       }
