--- a/packages/Examples/IncomeData.stories.mdx
+++ b/packages/Examples/IncomeData.stories.mdx
@@ -1,35 +1,35 @@
 import { Meta, Preview, Story, Props, Source, Description } from '@storybook/addon-docs/blocks';
-import Example1 from './Example1.vue'
+import IncomeData from './IncomeData.vue'
 import { withKnobs, object, boolean, select } from '@storybook/addon-knobs'
 import { RplContainer, RplRow, RplCol } from '@dpc-sdp/ripple-grid'
 
-<Meta title="Examples/Example 1" component={ Example1 } decorators={ [withKnobs] } />
+<Meta title="Examples/IncomeData" component={ IncomeData } decorators={ [withKnobs] } />
 
-# Example 1
+# IncomeData
 
-<Description of={ Example1 } type='docgen' />
+<Description of={ IncomeData } type='docgen' />
 
 ## Installation
 
 ```bash
-npm install @dpc-sdp/yourvic-example1 --save
+npm install @dpc-sdp/yourvic-examples --save
 ```
 
 ## Import
 
 ```javascript
-import { Example1 } from '@dpc-sdp/yourvic-example1'
+import { IncomeData } from '@dpc-sdp/yourvic-examples'
 ```
 
 ## Usage
 
 ```html
-<example-1 />
+<income-data />
 ```
 
 ## Props
 
-<Props of={ Example1 } />
+<Props of={ IncomeData } />
 
 ## Default
 
@@ -37,8 +37,8 @@ import { Example1 } from '@dpc-sdp/yourvic-example1'
   <Story name="Default">
     {
       {
-        components: { Example1 },
-        template: '<example-1 />',
+        components: { IncomeData },
+        template: '<income-data />',
         props: {
         }
       }
